# animegan2-ncnn-vulkan

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: windows-x64-gpu-vs2019.yml
models/: face_paint_512_v2.param
